# sdelay

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: all_pass.hpp  convert.hpp  curve_v2.cpp  curve_v2.h  sdelay.hpp  stack_allpass.hpp
src/ui/: LM_slider.h  common_curve_editor.cpp  common_curve_editor.h
